simpleingress/nginx-dep-C.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp-c
  name: nginx-c
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-c
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp-c
    spec:
      containers:
      - image: nginx:1.25.3
        imagePullPolicy: Always
        name: nginx-c
        command: [ 'nginx','-g','daemon off;' ]
        volumeMounts:
            - name: nginx-c
              mountPath: /usr/share/nginx/html/c
              readOnly: true
            - name: nginx-conf-c
              mountPath: /etc/nginx/
              readOnly: true
      volumes:
      - name: nginx-c
        configMap:
          name: nginx-c
      - name: nginx-conf-c
        configMap:
          name: nginx-conf-c
