simpleingress/nginx-svc-a.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /ping
  labels:
    app: myapp-a
  name: myapp-a
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
  selector:
    app: myapp-a
