simpleingress/nginx-svc-c.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp-c
  name: myapp-c
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
  selector:
    app: myapp-c
